@@ -1,1 +1,1 @@
-isfield (1, "m")
+isfield (1, "m") == 0
